<resources>
    <string name="app_name">Nest</string>
    <string name="slogan">Build your nest, grow your wealth.</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Login</string>
    <string name="getIn">Get In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="changeToSignIn">Already have an account? Sign in.</string>
    <string name="changeToSignUp">Don\'t have an account? Sign up.</string>
    <string name="settings_title">Account Settings</string>
    <string name="settings_user_info">User Info</string>
    <string name="settings_change_pass">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="expensesTitle">Total Expenses Graphical Overview</string>
    <string name="chooseCategory">Choose a category</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_example">Hi (username)\nhere\'s your monthly overview</string>
    <string name="this_months_budget">This month\'s budget:</string>
    <string name="budget_example">$0</string>
    <string name="entretenimiento">Entertainment</string>
    <string name="transporte">Transporte</string>
    <string name="alimentacion">Alimentación</string>
    <string name="salud">Salud</string>
    <string name="otros">Otros</string>
    <string name="search_for_an_movement">search for a movement...</string>
    <string name="movements_history">Movements History</string>
    <string name="filter">FILTER</string>
    <string name="total">Total:</string>
    <string name="transport">Transport</string>
    <string name="recreation">Recreation</string>
    <string name="food">Food</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="estimated_budget">Estimated Budget</string>
    <string name="categories_budget">Choose an estimated budget per category</string>
    <string name="net_balance">Net Balance</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="edit_budget">Edit your budget</string>
    <string name="alarm">Alarm At: </string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="living">Living</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">$0.00</string>
    <string name="category">Category</string>
    <string name="by_category">By Category</string>
    <string name="by_date">By Date</string>
    <string name="by_type">By Type</string>
    <string name="filter_movements">Filter Movements</string>
    <string name="description">Description</string>
    <string name="description_hint_expense">Add a description for your expense</string>
    <string name="description_hint_income">Add a description for your income</string>
    <string name="add_income">Add Income</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="payment_method">Payment Method</string>
    <string name="log_out">Log out</string>
    <string name="clear_filters">Clear filters</string>
    <string name="budget_hint_decimal">$0.0</string>
    <string name="budget_hint">$0</string>
    <string name="budget_hint_percentage">0%</string>
    <string name="save">Save</string>

</resources>