<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">






    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/settings_title"
        
        android:gravity="start"
        />






    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/settings_user_info"
        
        android:layout_marginTop="26dp" />






    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/name"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:paddingStart="7dp"
            android:paddingEnd="0dp" />





    <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"/>






    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/email"
        
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"/>






    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/settings_change_pass"
        
        android:layout_marginTop="26dp" />






    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/old_password"
        
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:id="@+id/editTextOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:drawableEnd="@drawable/eye"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/new_password"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:id="@+id/editTextNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:drawableEnd="@drawable/eye"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
      />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/save_changes"
        android:textAllCaps="true"
            android:fontFamily="@font/lexend_medium"
 />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageViewAlertIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/alert_circle"
            android:contentDescription="Icon"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ejemplo"
            android:textColor="@color/red"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexend_light"
            android:visibility="invisible" />
    </LinearLayout>





    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/log_out"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"/>




</LinearLayout>