<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    tools:context=".ui.home.filter.FilterMovementsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_movements"
            android:textSize="@dimen/text_size_medium_large" />

        <TextView
            android:id="@+id/tv_by_type_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="15dp"
            android:text="By Type" />

        <Spinner
            android:id="@+id/spinner_types_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/edt_text"
            android:paddingVertical="3dp" />


        <TextView
            android:id="@+id/tv_by_date_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="15dp"
            android:text="@string/by_date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_start_date_filter"
                style="@style/Nest.Selectable"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:drawableEnd="@drawable/calendar"
                android:gravity="fill_vertical"
                android:hint="@string/start_date"
                android:paddingHorizontal="14dp" />

            <Button
                android:id="@+id/btn_end_date_filter"
                style="@style/Nest.Selectable"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:drawableEnd="@drawable/calendar"
                android:gravity="fill_vertical"
                android:hint="@string/end_date"
                android:paddingHorizontal="14dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_by_category_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="15dp"
            android:text="@string/by_category" />

        <Spinner
            android:id="@+id/spinner_categories_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/edt_text"
            android:paddingVertical="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_clear_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:contentDescription="@string/clear_filters"
                android:src="@drawable/btn_clear_filter" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_apply_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:text="@string/apply_filters"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
