<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SignUp">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="20dp"
            android:src="@drawable/logo"
            android:gravity="center_horizontal" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/slogan"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_small"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_x_large"
            android:text="@string/signUp"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center_horizontal"
            android:paddingTop="25dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="15dp" />

        <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:inputType="text"
                android:layout_marginTop="5dp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp" />

        <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_rounded"
                android:layout_marginTop="5dp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="15dp"
                />

        <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edittext_rounded"
                android:drawableEnd="@drawable/eye"
                android:layout_marginTop="5dp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmPassword"
                android:layout_marginTop="15dp"
                />

        <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edittext_rounded"
                android:drawableEnd="@drawable/eye"
                android:layout_marginTop="5dp"
                />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">

            <ImageView
                    android:id="@+id/alertIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/alert_circle"
                    android:contentDescription="Icono"
                    android:visibility="invisible" />

            <TextView
                    android:id="@+id/txtAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ejemplo"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/lexend_light"
                    android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:fontFamily="@font/lexend_medium"

            />

    <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeToSignIn"
            android:fontFamily="@font/lexend_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_size_small" />


</LinearLayout>